# Shadow-Engineer

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.0.md  ROADMAP_v2.0.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-ai.yml  ci-backend.yml  ci-frontend.yml  production.yml
apps/ai-service/: Dockerfile  pyproject.toml
apps/ai-service/ai_service/: __init__.py  chunker.py  embeddings.py  llm_gateway.py  main.py  prompts.py  qdrant_client_mgr.py  retriever.py  scanner.py  worker.py
apps/ai-service/tests/: test_chunker.py
apps/core-service/: Dockerfile  pom.xml
apps/web/: Dockerfile  package-lock.json  package.json
docker/: Dockerfile.ai  Dockerfile.core  Dockerfile.web
docs/02_Requirements/: SRS.md
docs/03_Architecture/: Architecture_Index.md  High_Level_Design.md  Low_Level_Design.md
docs/04_Database/: Database_Design.md
docs/05_API/: API_Specification.md  OpenAPI.yaml
docs/06_AI/: AI_Architecture.md
docs/06_Security/: Security_Architecture.md
docs/07_UI_UX/: UI_UX_Design.md
docs/08_Engineering/: AI_Chat_Guide.md  AI_Code_Review_Guide.md  Analytics_Guide.md  Authentication_Setup.md  Developer_Productivity_Guide.md  Developer_Setup.md  Environment_Variables.md  Monorepo_Architecture.md  Repository_Sync_Guide.md  Vector_Database_Guide.md
docs/09_DevOps/: Deployment_Guide.md
infra/k8s/: ai-deployment.yaml  core-deployment.yaml  ingress.yaml  web-deployment.yaml
infra/terraform/: eks.tf  elasticache.tf  main.tf  rds.tf  (+1 more)
(+107 files in other folders)
