[tool.poetry]
name = "ai-service"
version = "1.0.0"
description = "AI Context Engine for Shadow Engineer"
authors = ["Shadow Engineer Team <team@shadowengineer.com>"]
readme = "README.md"
packages = [{include = "ai_service"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
qdrant-client = "^1.8.2"
openai = "^1.14.2"
structlog = "^24.1.0"
pygments = "^2.17.2"
radon = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
